examples/features/headers_based_traffic/istio/subset_level/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-vsvc
spec:
  gateways:
    - istio-host-split-gateway
  hosts:
    - demo-header.example.com
  http:
    - name: primary
      route:
        - destination:
            host: stable-service-headers
            subset: stable
          weight: 100
        - destination:
            host: stable-service-headers
            subset: canary
          weight: 0
